feat: all updates

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div class="root">someinfo</div>
+    <!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState()">
+    </fb:login-button> -->
+    <script>
+        // window.fbAsyncInit = function () {
+        //     FB.init({
+        //         appId: '705155927559990',
+        //         cookie: true,
+        //         xfbml: true,
+        //         version: 'v12.0'
+        //     });
+
+        //     FB.AppEvents.logPageView();
+        //     FB.getLoginStatus(function (response) {
+        //         checker(response);
+        //     });
+
+        // };
+
+        // (function (d, s, id) {
+        //     var js, fjs = d.getElementsByTagName(s)[0];
+        //     if (d.getElementById(id)) { return; }
+        //     js = d.createElement(s); js.id = id;
+        //     js.src = "https://connect.facebook.net/en_US/sdk.js";
+        //     fjs.parentNode.insertBefore(js, fjs);
+        // }(document, 'script', 'facebook-jssdk'));
+        // function checker(response) {
+        //     console.log('ok we are in checker')
+        //     console.log(response.status)
+        //     if (response.status === 'not_authorized') {
+        //         FB.login();
+        //     }
+        // }
+        // function checkLoginState() {
+        //     FB.getLoginStatus(function (response) {
+        //         console.log(response);
+        //     });
+        // }
+    </script>
+
 </body>
+
 </html>
